[gd_scene load_steps=2 format=3 uid="uid://c7qca6i2c2ow3"]

[ext_resource type="Script" path="res://scripts/pause.gd" id="1_1ed7k"]

[node name="pause" type="Control"]
process_mode = 3
visible = false
z_index = 2000
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1ed7k")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="TitleText" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 3.0
offset_top = 24.0
offset_right = 1925.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "Pause Menu"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 162.0
offset_right = 614.0
offset_bottom = 318.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "Resume"

[node name="EditPalette" type="Button" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 359.0
offset_right = 614.0
offset_bottom = 515.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "Edit Palette"

[node name="LeaveServer" type="Button" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 553.0
offset_right = 614.0
offset_bottom = 709.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "Leave Server"

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="EditPalette" to="." method="_on_edit_palette_pressed"]
[connection signal="pressed" from="LeaveServer" to="." method="_on_leave_server_pressed"]
